[package]
name = "site-diff-checker_rs"
version = "0.1.0"
authors = ["Zoo Sky <zooksy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
env_logger = "0.9"
log = "0.4"
once_cell = "1.7.2"
prettydiff = "0.5"
reqwest = { version = "0.11", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-actors = { version = "0.1.0", git = "https://git.asonix.dog/asonix/tokio-actors", branch = "main" }
